# events_tracker

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  requirements.txt  useful links.txt
app/: config_store.py  main.py  runner.py  seed.py
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 103fae6ca79c_initial_schema.py  53e59bb60130_add_popularity_score.py
backend/app/: cleanup_old_data.py  config.py  database.py  main.py  seed.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  categories.py  data_sources.py  events.py  router.py  tags.py  users.py
backend/app/core/: exceptions.py  rate_limit.py  security.py
backend/app/models/: __init__.py  category.py  data_source.py  event.py  tag.py  user.py
backend/app/schemas/: category.py  data_source.py  event.py  user.py
backend/app/services/: event_service.py
backend/app/services/ingestion/: base.py  calendarific.py  fashion_weeks.py  games.py  holidays.py  movies.py  political.py  scheduler.py  sports.py  trakt.py  wikipedia_albums.py
backend/ingest/: __main__.py  calendarific.py  config.py  fashion_weeks.py  requirements.txt  trakt.py  wikipedia_albums.py
docs/: calendarific-api.md  igdb-api.md  trakt-api.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
ingest/: __main__.py  ballotpedia.py  base.py  calendarific.py  config.py  db.py  export_sheets.py  fashion_weeks.py  gen-lang-client-0517425149-b24771d376b8.json  igdb.py  (+3 more)
(+38 files in other folders)
